// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textShadow renders 0 1`] = `
Array [
  .c0 {
  text-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders function 1`] = `
Array [
  .c0 {
  text-shadow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders invalid theme path 1`] = `
Array [
  .c0 {
  text-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders negative number 1`] = `
Array [
  .c0 {
  text-shadow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-shadow: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-shadow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-shadow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-shadow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-shadow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-shadow: July;
}

@media May {
  .c0 {
    text-shadow: August;
  }
}

@media April {
  .c0 {
    text-shadow: September;
  }
}

@media January {
  .c0 {
    text-shadow: November;
  }
}

@media April {
  .c0 {
    text-shadow: August;
  }
}

@media June {
  .c0 {
    text-shadow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: July;
}

@media May {
  .c0 {
    text-shadow: August;
  }
}

@media April {
  .c0 {
    text-shadow: September;
  }
}

@media January {
  .c0 {
    text-shadow: November;
  }
}

@media April {
  .c0 {
    text-shadow: August;
  }
}

@media June {
  .c0 {
    text-shadow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-shadow: November;
  }
}

@media April {
  .c0 {
    text-shadow: January;
  }
}

@media January {
  .c0 {
    text-shadow: December;
  }
}

@media April {
  .c0 {
    text-shadow: April;
  }
}

@media June {
  .c0 {
    text-shadow: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-shadow: November;
  }
}

@media April {
  .c0 {
    text-shadow: January;
  }
}

@media January {
  .c0 {
    text-shadow: December;
  }
}

@media April {
  .c0 {
    text-shadow: April;
  }
}

@media June {
  .c0 {
    text-shadow: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-shadow: July;
  }
}

@media April {
  .c0 {
    text-shadow: August;
  }
}

@media January {
  .c0 {
    text-shadow: September;
  }
}

@media April {
  .c0 {
    text-shadow: November;
  }
}

@media June {
  .c0 {
    text-shadow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-shadow: July;
  }
}

@media April {
  .c0 {
    text-shadow: August;
  }
}

@media January {
  .c0 {
    text-shadow: September;
  }
}

@media April {
  .c0 {
    text-shadow: November;
  }
}

@media June {
  .c0 {
    text-shadow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-shadow: January;
  }
}

@media April {
  .c0 {
    text-shadow: December;
  }
}

@media January {
  .c0 {
    text-shadow: April;
  }
}

@media April {
  .c0 {
    text-shadow: May;
  }
}

@media June {
  .c0 {
    text-shadow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-shadow: January;
  }
}

@media April {
  .c0 {
    text-shadow: December;
  }
}

@media January {
  .c0 {
    text-shadow: April;
  }
}

@media April {
  .c0 {
    text-shadow: May;
  }
}

@media June {
  .c0 {
    text-shadow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders postitive number 1`] = `
Array [
  .c0 {
  text-shadow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders string 1`] = `
Array [
  .c0 {
  text-shadow: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textShadow renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textShadow renders valid theme path 1`] = `
Array [
  .c0 {
  text-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
